syntax = "proto3";

option csharp_namespace = "GrpcClientApp";

package  customer;

service Customer {
  rpc GetAllCustomers (Empty) returns (CustomerList) {}
  rpc GetCustomer (CustomerRequest) returns (CustomerResponse) {}
  rpc AddCustomer (CustomeAddRequest) returns (CustomerResponse) {}
}

message Empty {
}

message CustomerList {
 repeated CustomerResponse Customers = 1;
}

message CustomerRequest {
    // int32, bool, string, bytes, float, double, enum, or message
  int32 CustomerId = 1;
}
message CustomeAddRequest {
 string CustomerName = 2;
 string CustomerEmail = 3;
}

message CustomerResponse {
  optional int32 CustomerId = 1;
  optional string CustomerName = 2;
  optional string CustomerEmail = 3;
}